Updated page title with missing "Bluegrass"

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ dogs that were scheduled to be put down due to behavioral issues.
 <html lang="en">
 
 <head>
-    <title>Adopt Me! Pet Rescue</title>
+    <title>Adopt Me! Bluegrass Pet Rescue</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="css/normalize.css" rel="stylesheet">
