Added ajax functionality and redesigned with Bulma CSS

--- a/index.html
+++ b/index.html
@@ -1,70 +1,58 @@
 <!DOCTYPE html>
-<!--
-Main portfolio project for <Code>Louisville
-
-After seeing family trying to adopt a dog from one bad website After
-another I decided to redo http://www.adoptmebluegrasspetrescue.com/
-which helps prisoners and dogs by allowing the inmates to rehibilitate
-dogs that were scheduled to be put down due to behavioral issues.
--->
 <html lang="en">
 
 <head>
-    <title>Adopt Me! Bluegrass Pet Rescue</title>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="css/normalize.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+
+    <title>Adopt Me! Bluegrass Pet Rescue</title>
+
+    <!--CSS-->
+    <link href='//fonts.googleapis.com/css?family=Varela+Round' rel='stylesheet' type='text/css'>
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="css/bulma.css" type="text/css">
+    <link rel="stylesheet" href="css/main.css" type="text/css">
+    <!--END CSS-->
 </head>
 
 <body>
-    <header>
-        <div class="container">
-            <a href="#" class="logo"><img src="img/adoptMeLogo.png"></a>
-            <nav>
-                <ul class="main-nav">
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About Us</a></li>
-                    <li><a href="#">Adopt Me!</a></li>
-                    <li><a href="#">Events</a></li>
-                    <li><a href="#">Programs</a></li>
-                    <li><a href="#">How to help</a></li>
-                    <li><a href="#">Contact Us</a></li>
-                </ul>
-            </nav>
+    <div class="container is-fluid">
+        <header class="content has-text-centered">
+            <h1>Adopt Me! Bluegrass Pet Rescue</h1>
+        </header>
+
+        <div class="content">
+            <article>
+                <h2>About</h2>
+                <p>Ex direct trade aliquip fam, single-origin coffee vero church-key. Leggings polaroid waistcoat stumptown,
+                    messenger bag officia coloring book poke hoodie heirloom swag chartreuse quinoa four dollar toast tote
+                    bag. Pork belly direct trade nisi vaporware, fanny pack eiusmod jean shorts flannel stumptown keytar
+                    magna nesciunt drinking vinegar et. Tumblr banh mi vice actually cold-pressed, cronut vexillologist roof
+                    party craft beer. Snackwave pinterest anim shabby chic, sustainable prism dreamcatcher swag artisan whatever
+                    narwhal fanny pack laborum lumbersexual. Odio vexillologist coloring book tbh, minim vero ex keffiyeh
+                    nostrud sriracha sunt. Gluten-free sartorial pickled you probably haven't heard of them.</p>
+                <p>Williamsburg assumenda organic +1 bespoke. Odio seitan 3 wolf moon, crucifix mustache listicle squid salvia
+                    poke blue bottle drinking vinegar retro laborum art party. Kombucha bespoke adipisicing shoreditch post-ironic.
+                    Enamel pin vaporware truffaut, occaecat biodiesel magna thundercats quinoa. Next level hot chicken tumeric
+                    ea, ut sartorial polaroid scenester proident sed small batch sustainable selfies banjo. Eiusmod polaroid
+                    truffaut chartreuse, four dollar toast dolore forage incididunt retro proident yr dreamcatcher pork belly
+                    yuccie authentic. Anim poke live-edge, odio poutine bitters kogi tumblr celiac lumbersexual chia exercitation.</p>
+
+                <h2>Adopt Me</h2>
+                <div id="animals" class="is-flex-tablet columns">
+                </div>
+            </article>
+
         </div>
-    </header>
-    <div class="container">
-        <article>
-            <h2>Featured Cat</h2>
-            <img class="kitty" src="http://placekitten.com/g/500/500">
-        </article>
-        <article>
-            <h2>News</h2>
-            <p>The September 2016 Edition and The Animal Issue of Louisville magazine!What better way to celebrate the animals
-                of Louisville then including an article about the top notch prison program, PAWS BEHIND BARS, at Luther Luckett
-                Correctional Complex in Oldham County! This beautifully written article by Mary C Austin with photos but
-                Micki Winters features four of our fabulous inmate handlers and their dogs; Kenzie, Brixx, Apollo and Duncan!
-                Get your copy of the September issue of Louisville magazine today! Barnes & Noble has them front-and-center
-                on their news stand! Brixx has been adopted but Kenzie, Apollo and Duncan are waiting for their forever families!
-                Email adoptmebpr@aol.com for more information about our dogs or the prison program!</p>
-        </article>
     </div>
+
+    <!--JAVASCRIPT-->
+    <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
+    <script src="js/flickr.js"></script>
+    <script src="js/script.js"></script>
+    <!--END JAVASCRIPT-->
 </body>
-<footer>
-    <hr>
-<address>
-    Adopt Me! Bluegrass Pet Rescue<br>
-    6315 W Highway 146<br>
-    Crestwood, KY <br>
-    <br>
-    (Small white building behind Feed and Seed Depot)<br>
-    <br>
-    Mailing Address:<br>
-    P.O. Box 202<br>
-    LaGrange, KY 40031<br>
-    <br>
-    (c) 2016 Adopt Me! Blegrass Pet Rescue Oldham County, KY
-</address>
-</footer>
+
 </html>
