--- a/index.html
+++ b/index.html
@@ -18,33 +18,175 @@
 </head>
 
 <body>
+    <nav class="nav">
+        <div class="nav-left">
+            <a class="nav-item">
+                <img src="http://bulma.io/images/bulma-logo.png" alt="Bulma logo">
+            </a>
+        </div>
+
+        <div class="nav-center">
+            <a class="nav-item">
+                <span class="icon">
+        <i class="fa fa-github"></i>
+      </span>
+            </a>
+            <a class="nav-item">
+                <span class="icon">
+                    <i class="fa fa-twitter"></i>
+                </span>
+            </a>
+        </div>
+
+        <!-- This "nav-toggle" hamburger menu is only visible on mobile -->
+        <!-- You need JavaScript to toggle the "is-active" class on "nav-menu" -->
+        <span class="nav-toggle">
+            <span></span>
+            <span></span>
+            <span></span>
+        </span>
+
+        <!-- This "nav-menu" is hidden on mobile -->
+        <!-- Add the modifier "is-active" to display it on mobile -->
+        <div class="nav-right nav-menu">
+            <a class="nav-item">Home</a>
+            <a class="nav-item">Documentation</a>
+            <a class="nav-item">Blog</a>
+            <span class="nav-item">
+                <a class="button" >
+                    <span class="icon">
+                        <i class="fa fa-twitter"></i>
+                    </span>
+                    <span>Tweet</span>
+                </a>
+                <a class="button is-primary">
+                    <span class="icon">
+                        <i class="fa fa-download"></i>
+                    </span>
+                    <span>Download</span>
+                </a>
+            </span>
+        </div>
+    </nav>
     <div class="container is-fluid">
         <header class="content has-text-centered">
-            <h1>Adopt Me! Bluegrass Pet Rescue</h1>
+            <h1 class="title">Adopt Me! Bluegrass Pet Rescue</h1>
         </header>
 
-        <div class="content">
-            <article>
-                <h2>About</h2>
-                <p>Ex direct trade aliquip fam, single-origin coffee vero church-key. Leggings polaroid waistcoat stumptown,
-                    messenger bag officia coloring book poke hoodie heirloom swag chartreuse quinoa four dollar toast tote
-                    bag. Pork belly direct trade nisi vaporware, fanny pack eiusmod jean shorts flannel stumptown keytar
-                    magna nesciunt drinking vinegar et. Tumblr banh mi vice actually cold-pressed, cronut vexillologist roof
-                    party craft beer. Snackwave pinterest anim shabby chic, sustainable prism dreamcatcher swag artisan whatever
-                    narwhal fanny pack laborum lumbersexual. Odio vexillologist coloring book tbh, minim vero ex keffiyeh
-                    nostrud sriracha sunt. Gluten-free sartorial pickled you probably haven't heard of them.</p>
-                <p>Williamsburg assumenda organic +1 bespoke. Odio seitan 3 wolf moon, crucifix mustache listicle squid salvia
-                    poke blue bottle drinking vinegar retro laborum art party. Kombucha bespoke adipisicing shoreditch post-ironic.
-                    Enamel pin vaporware truffaut, occaecat biodiesel magna thundercats quinoa. Next level hot chicken tumeric
-                    ea, ut sartorial polaroid scenester proident sed small batch sustainable selfies banjo. Eiusmod polaroid
-                    truffaut chartreuse, four dollar toast dolore forage incididunt retro proident yr dreamcatcher pork belly
-                    yuccie authentic. Anim poke live-edge, odio poutine bitters kogi tumblr celiac lumbersexual chia exercitation.</p>
-
-                <h2>Adopt Me</h2>
-                <div id="animals" class="is-flex-tablet columns">
+        <div class="content columns is-desktop">
+            <div class="column">
+                <article>
+                    <h2>Mission Statement:</h2>
+                    <p>Adopt Me! Bluegrass Pet Rescue is a non-profit organization guided by the principals of compassion, integrity
+                        and dedication! We seek to incorporate and educate the community to make a positive impact on pet
+                        overpopulation; and through our work, we rescue, nurture, rehibilitate and place companion animals
+                        into loving, committed homes!</p>
+                </article>
+            </div>
+            <div class="column">
+                <section>
+                    <h2 class="subtitle">Adopt Me<span class="is-small"> - Featured Pets</span></h2>
+                    <div id="animals" class="is-flex-tablet columns">
+                    </div>
+                </section>
+                <div class="is-block">
+                    <h2 class="subtitle">Recent Tweets</h2>
+                    <div class="box">
+                        <article class="media">
+                            <div class="media-left">
+                                <figure class="image is-64x64">
+                                    <img src="http://bulma.io/images/placeholders/128x128.png" alt="Image">
+                                </figure>
+                            </div>
+                            <div class="media-content">
+                                <div class="content">
+                                    <p>
+                                        <strong>John Smith</strong> <small>@johnsmith</small> <small>31m</small>
+                                        <br> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean efficitur sit
+                                        amet massa fringilla egestas. Nullam condimentum luctus turpis.
+                                    </p>
+                                </div>
+                                <nav class="level">
+                                    <div class="level-left">
+                                        <a class="level-item">
+                                            <span class="icon is-small"><i class="fa fa-reply"></i></span>
+                                        </a>
+                                        <a class="level-item">
+                                            <span class="icon is-small"><i class="fa fa-retweet"></i></span>
+                                        </a>
+                                        <a class="level-item">
+                                            <span class="icon is-small"><i class="fa fa-heart"></i></span>
+                                        </a>
+                                    </div>
+                                </nav>
+                            </div>
+                        </article>
+                    </div>
+                    <div class="box">
+                        <article class="media">
+                            <div class="media-left">
+                                <figure class="image is-64x64">
+                                    <img src="http://bulma.io/images/placeholders/128x128.png" alt="Image">
+                                </figure>
+                            </div>
+                            <div class="media-content">
+                                <div class="content">
+                                    <p>
+                                        <strong>John Smith</strong> <small>@johnsmith</small> <small>31m</small>
+                                        <br> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean efficitur sit
+                                        amet massa fringilla egestas. Nullam condimentum luctus turpis.
+                                    </p>
+                                </div>
+                                <nav class="level">
+                                    <div class="level-left">
+                                        <a class="level-item">
+                                            <span class="icon is-small"><i class="fa fa-reply"></i></span>
+                                        </a>
+                                        <a class="level-item">
+                                            <span class="icon is-small"><i class="fa fa-retweet"></i></span>
+                                        </a>
+                                        <a class="level-item">
+                                            <span class="icon is-small"><i class="fa fa-heart"></i></span>
+                                        </a>
+                                    </div>
+                                </nav>
+                            </div>
+                        </article>
+                    </div>
+                    <div class="box">
+                        <article class="media">
+                            <div class="media-left">
+                                <figure class="image is-64x64">
+                                    <img src="http://bulma.io/images/placeholders/128x128.png" alt="Image">
+                                </figure>
+                            </div>
+                            <div class="media-content">
+                                <div class="content">
+                                    <p>
+                                        <strong>John Smith</strong> <small>@johnsmith</small> <small>31m</small>
+                                        <br> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean efficitur sit
+                                        amet massa fringilla egestas. Nullam condimentum luctus turpis.
+                                    </p>
+                                </div>
+                                <nav class="level">
+                                    <div class="level-left">
+                                        <a class="level-item">
+                                            <span class="icon is-small"><i class="fa fa-reply"></i></span>
+                                        </a>
+                                        <a class="level-item">
+                                            <span class="icon is-small"><i class="fa fa-retweet"></i></span>
+                                        </a>
+                                        <a class="level-item">
+                                            <span class="icon is-small"><i class="fa fa-heart"></i></span>
+                                        </a>
+                                    </div>
+                                </nav>
+                            </div>
+                        </article>
+                    </div>
                 </div>
-            </article>
 
+            </div>
         </div>
     </div>
 
