--- a/index.html
+++ b/index.html
@@ -18,61 +18,28 @@
 </head>
 
 <body>
-    <nav class="nav">
+    <nav class="nav has-shadow">
         <div class="nav-left">
             <a class="nav-item">
-                <img src="http://bulma.io/images/bulma-logo.png" alt="Bulma logo">
-            </a>
-        </div>
-
-        <div class="nav-center">
-            <a class="nav-item">
-                <span class="icon">
-        <i class="fa fa-github"></i>
-      </span>
-            </a>
-            <a class="nav-item">
-                <span class="icon">
-                    <i class="fa fa-twitter"></i>
-                </span>
+                <img src="img/adoptMeLogo.png" alt="logo" class="image">
             </a>
         </div>
 
         <!-- This "nav-toggle" hamburger menu is only visible on mobile -->
         <!-- You need JavaScript to toggle the "is-active" class on "nav-menu" -->
-        <span class="nav-toggle">
-            <span></span>
-            <span></span>
-            <span></span>
+        <span id="nav-toggle" class="nav-toggle">
+        <span></span>
+        <span></span>
+        <span></span>
         </span>
-
         <!-- This "nav-menu" is hidden on mobile -->
         <!-- Add the modifier "is-active" to display it on mobile -->
         <div class="nav-right nav-menu">
             <a class="nav-item">Home</a>
-            <a class="nav-item">Documentation</a>
-            <a class="nav-item">Blog</a>
-            <span class="nav-item">
-                <a class="button" >
-                    <span class="icon">
-                        <i class="fa fa-twitter"></i>
-                    </span>
-                    <span>Tweet</span>
-                </a>
-                <a class="button is-primary">
-                    <span class="icon">
-                        <i class="fa fa-download"></i>
-                    </span>
-                    <span>Download</span>
-                </a>
-            </span>
+            <a class="nav-item">Contact</a>
         </div>
     </nav>
     <div class="container is-fluid">
-        <header class="content has-text-centered">
-            <h1 class="title">Adopt Me! Bluegrass Pet Rescue</h1>
-        </header>
-
         <div class="content columns is-desktop">
             <div class="column">
                 <article>
