Fixed padding between featrued pets and tweets added name generator to featured pets as well Fixed docker build

--- a/index.html
+++ b/index.html
@@ -51,12 +51,12 @@
                 </article>
             </div>
             <div class="column">
-                <section>
+                <section class="container">
                     <h2 class="subtitle">Adopt Me<span class="is-small"> - Featured Pets</span></h2>
-                    <div id="animals" class="is-flex-tablet columns">
+                    <div id="animals" class="is-flex-tablet columns is-gapless">
                     </div>
                 </section>
-                <div class="is-block">
+                <div class="container">
                     <h2 class="subtitle">Recent Tweets</h2>
                     <div class="box">
                         <article class="media">
