reduced number of featured pets shown Added justify-content to give better spacing.

--- a/index.html
+++ b/index.html
@@ -43,17 +43,21 @@
         <div class="content columns is-desktop">
             <div class="column">
                 <article>
-                    <h2>Mission Statement:</h2>
+                    <h2 class="subtitle">Mission Statement</h2>
                     <p>Adopt Me! Bluegrass Pet Rescue is a non-profit organization guided by the principals of compassion, integrity
                         and dedication! We seek to incorporate and educate the community to make a positive impact on pet
                         overpopulation; and through our work, we rescue, nurture, rehibilitate and place companion animals
                         into loving, committed homes!</p>
                 </article>
+                <article>
+                    <h2 class="subtitle">About</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                </article>
             </div>
             <div class="column">
                 <section class="container">
                     <h2 class="subtitle">Adopt Me<span class="is-small"> - Featured Pets</span></h2>
-                    <div id="animals" class="is-flex-tablet columns is-gapless">
+                    <div id="animals" class="is-flex-tablet columns">
                     </div>
                 </section>
                 <div class="container">
