--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
         <!-- This "nav-menu" is hidden on mobile -->
         <!-- Add the modifier "is-active" to display it on mobile -->
         <div class="nav-right nav-menu">
-            <a class="nav-item">Home</a>
-            <a class="nav-item">Contact</a>
+            <a href="index.html" class="nav-item">Home</a>
+            <a href="contact.html" class="nav-item">Contact</a>
         </div>
     </nav>
     <div class="container is-fluid">
         <div class="content columns is-desktop">
-            <div class="column">
+            <div class="column is-3-desktop">
                 <article>
                     <h2 class="subtitle">Mission Statement</h2>
                     <p>Adopt Me! Bluegrass Pet Rescue is a non-profit organization guided by the principals of compassion, integrity
@@ -51,112 +51,115 @@
                 </article>
                 <article>
                     <h2 class="subtitle">About</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                        dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                        ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore
+                        eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
+                        deserunt mollit anim id est laborum.</p>
                 </article>
             </div>
-            <div class="column">
-                <section class="container">
+            <div class="column is-6-desktop">
+                <section>
                     <h2 class="subtitle">Adopt Me<span class="is-small"> - Featured Pets</span></h2>
-                    <div id="animals" class="is-flex-tablet columns">
+                    <div id="animals" class="is-flex-tablet columns is-desktop">
                     </div>
                 </section>
-                <div class="container">
-                    <h2 class="subtitle">Recent Tweets</h2>
-                    <div class="box">
-                        <article class="media">
-                            <div class="media-left">
-                                <figure class="image is-64x64">
-                                    <img src="http://bulma.io/images/placeholders/128x128.png" alt="Image">
-                                </figure>
+            </div>
+            <div class="column is-3-desktop">
+                <h2 class="subtitle">Recent Tweets</h2>
+                <div class="box">
+                    <article class="media">
+                        <div class="media-left">
+                            <figure class="image is-64x64">
+                                <img src="http://bulma.io/images/placeholders/128x128.png" alt="Image">
+                            </figure>
+                        </div>
+                        <div class="media-content">
+                            <div class="content">
+                                <p>
+                                    <strong>John Smith</strong> <small>@johnsmith</small> <small>31m</small>
+                                    <br> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean efficitur sit amet
+                                    massa fringilla egestas. Nullam condimentum luctus turpis.
+                                </p>
                             </div>
-                            <div class="media-content">
-                                <div class="content">
-                                    <p>
-                                        <strong>John Smith</strong> <small>@johnsmith</small> <small>31m</small>
-                                        <br> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean efficitur sit
-                                        amet massa fringilla egestas. Nullam condimentum luctus turpis.
-                                    </p>
+                            <nav class="level">
+                                <div class="level-left">
+                                    <a class="level-item">
+                                        <span class="icon is-small"><i class="fa fa-reply"></i></span>
+                                    </a>
+                                    <a class="level-item">
+                                        <span class="icon is-small"><i class="fa fa-retweet"></i></span>
+                                    </a>
+                                    <a class="level-item">
+                                        <span class="icon is-small"><i class="fa fa-heart"></i></span>
+                                    </a>
                                 </div>
-                                <nav class="level">
-                                    <div class="level-left">
-                                        <a class="level-item">
-                                            <span class="icon is-small"><i class="fa fa-reply"></i></span>
-                                        </a>
-                                        <a class="level-item">
-                                            <span class="icon is-small"><i class="fa fa-retweet"></i></span>
-                                        </a>
-                                        <a class="level-item">
-                                            <span class="icon is-small"><i class="fa fa-heart"></i></span>
-                                        </a>
-                                    </div>
-                                </nav>
-                            </div>
-                        </article>
-                    </div>
-                    <div class="box">
-                        <article class="media">
-                            <div class="media-left">
-                                <figure class="image is-64x64">
-                                    <img src="http://bulma.io/images/placeholders/128x128.png" alt="Image">
-                                </figure>
-                            </div>
-                            <div class="media-content">
-                                <div class="content">
-                                    <p>
-                                        <strong>John Smith</strong> <small>@johnsmith</small> <small>31m</small>
-                                        <br> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean efficitur sit
-                                        amet massa fringilla egestas. Nullam condimentum luctus turpis.
-                                    </p>
-                                </div>
-                                <nav class="level">
-                                    <div class="level-left">
-                                        <a class="level-item">
-                                            <span class="icon is-small"><i class="fa fa-reply"></i></span>
-                                        </a>
-                                        <a class="level-item">
-                                            <span class="icon is-small"><i class="fa fa-retweet"></i></span>
-                                        </a>
-                                        <a class="level-item">
-                                            <span class="icon is-small"><i class="fa fa-heart"></i></span>
-                                        </a>
-                                    </div>
-                                </nav>
-                            </div>
-                        </article>
-                    </div>
-                    <div class="box">
-                        <article class="media">
-                            <div class="media-left">
-                                <figure class="image is-64x64">
-                                    <img src="http://bulma.io/images/placeholders/128x128.png" alt="Image">
-                                </figure>
-                            </div>
-                            <div class="media-content">
-                                <div class="content">
-                                    <p>
-                                        <strong>John Smith</strong> <small>@johnsmith</small> <small>31m</small>
-                                        <br> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean efficitur sit
-                                        amet massa fringilla egestas. Nullam condimentum luctus turpis.
-                                    </p>
-                                </div>
-                                <nav class="level">
-                                    <div class="level-left">
-                                        <a class="level-item">
-                                            <span class="icon is-small"><i class="fa fa-reply"></i></span>
-                                        </a>
-                                        <a class="level-item">
-                                            <span class="icon is-small"><i class="fa fa-retweet"></i></span>
-                                        </a>
-                                        <a class="level-item">
-                                            <span class="icon is-small"><i class="fa fa-heart"></i></span>
-                                        </a>
-                                    </div>
-                                </nav>
-                            </div>
-                        </article>
-                    </div>
+                            </nav>
+                        </div>
+                    </article>
                 </div>
-
+                <div class="box">
+                    <article class="media">
+                        <div class="media-left">
+                            <figure class="image is-64x64">
+                                <img src="http://bulma.io/images/placeholders/128x128.png" alt="Image">
+                            </figure>
+                        </div>
+                        <div class="media-content">
+                            <div class="content">
+                                <p>
+                                    <strong>John Smith</strong> <small>@johnsmith</small> <small>31m</small>
+                                    <br> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean efficitur sit amet
+                                    massa fringilla egestas. Nullam condimentum luctus turpis.
+                                </p>
+                            </div>
+                            <nav class="level">
+                                <div class="level-left">
+                                    <a class="level-item">
+                                        <span class="icon is-small"><i class="fa fa-reply"></i></span>
+                                    </a>
+                                    <a class="level-item">
+                                        <span class="icon is-small"><i class="fa fa-retweet"></i></span>
+                                    </a>
+                                    <a class="level-item">
+                                        <span class="icon is-small"><i class="fa fa-heart"></i></span>
+                                    </a>
+                                </div>
+                            </nav>
+                        </div>
+                    </article>
+                </div>
+                <div class="box">
+                    <article class="media">
+                        <div class="media-left">
+                            <figure class="image is-64x64">
+                                <img src="http://bulma.io/images/placeholders/128x128.png" alt="Image">
+                            </figure>
+                        </div>
+                        <div class="media-content">
+                            <div class="content">
+                                <p>
+                                    <strong>John Smith</strong> <small>@johnsmith</small> <small>31m</small>
+                                    <br> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean efficitur sit amet
+                                    massa fringilla egestas. Nullam condimentum luctus turpis.
+                                </p>
+                            </div>
+                            <nav class="level">
+                                <div class="level-left">
+                                    <a class="level-item">
+                                        <span class="icon is-small"><i class="fa fa-reply"></i></span>
+                                    </a>
+                                    <a class="level-item">
+                                        <span class="icon is-small"><i class="fa fa-retweet"></i></span>
+                                    </a>
+                                    <a class="level-item">
+                                        <span class="icon is-small"><i class="fa fa-heart"></i></span>
+                                    </a>
+                                </div>
+                            </nav>
+                        </div>
+                    </article>
+                </div>
             </div>
         </div>
     </div>
