Moved ajax call to be within the index.html page to stop it from running on other pages. Updated Readme instructions to view using github pages.

--- a/index.html
+++ b/index.html
@@ -203,7 +203,14 @@
           });
       });
     </script>
-    <script src="js/script.js"></script>
+    <script src="js/script.js">
+      $.ajax({
+          url: picsURL,
+          method: "GET",
+          dataType: "text",
+          success: callback
+      });
+    </script>
     <!--END JAVASCRIPT-->
 </body>
 
